fixing some more sonar violations